# Rome-Total-Simulation

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  config.json  main.cpp
docs/: docs.html  docs.org  todo.org
events/: young_romans_flocking_to_greece.json
include/: imgui_impl_sdl.cpp
resources/: convert_resources_to_png.sh
resources/fonts/CONSTANTINE/: READ.txt  SIL Open Font License.txt
resources/icons/: convert_resources_to_png.sh
src/: style.h  ui_help_strs.h
